<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/Et_User"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/Et_Pass"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:hint="@string/password" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2" >

        <Button
            android:id="@+id/Btn_Login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login" />
    </RelativeLayout>

</LinearLayout>