<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#dfdfdf"
    android:orientation="vertical" >

    <include
        android:id="@+id/Head_Bar"
        layout="@layout/head_bar" />

    <ImageView
        android:id="@+id/Img_Icon"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dip"
        android:background="#f37327" />

    <TextView
        android:id="@+id/Tv_Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Img_Icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/sansheng_biz_helper"
        android:textColor="#222222"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/Tv_Version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Tv_Icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:text="@string/version"
        android:textColor="#666666"
        android:textSize="15sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Tv_Version"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:text="@string/about_content"
        android:textColor="#222222"
        android:lineSpacingExtra="5dip"
        android:textSize="16sp" />

</RelativeLayout>